added in the experience section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">PORTFOLIO</a>
+      <a class="navbar-brand js-scroll" href="#page-top">SANJU JAYACHANDRAN</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -51,6 +51,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#exp">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -69,7 +72,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Sanju Jayachandran</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Jr.DataScientist, Software Engineer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">I know how to get things done.</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -99,9 +102,6 @@
                     </div>
                   </div>
                 </div>
-
-
-
              <div class="skills">
   <h3>Technical Skills</h3>
   <h4>Programming Languages</h4>
@@ -150,6 +150,63 @@
         </div>
       </div>
     </div>
+      </section>
+  <section id="exp" >
+    <div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-12">
+            <div class="card p-4"> <!-- Increased padding for better appearance -->
+                <div class="card-header">
+                    <div class="mt-2">
+                        <h4>Expertise</h4>
+                        <span class="line"></span>
+                    </div>
+                </div>
+                <div class="card-body text-left">
+                    <h6 class="title text-danger">06/2023 - Present</h6>
+                  <p><b>Jr.Data Scientist (Knowledge Lens, A Rockwell Automation Company)</b></p>
+                  <ul>
+                    <li class="subtitle">Consulting project that predicts the scouring viscosity value in the mixing section of a global tyre manufacturer positioning Rockwell Automation as their preferred Data Science solution providers in Japan.</li>
+                    <li>Incorporated machine learning principles into a web application, enabling seamless integration
+and processing of large-scale real-time data.</li>
+                  </ul>
+                    <hr>
+                    <h6 class="title text-danger">06/2022 - 06/2023</h6>
+                  <p><b>Software Engineer (Knowledge Lens, A Rockwell Automation Company)</b></p>
+                  <ul>
+                    <li class="subtitle">Proficiently developed end-to-end web applications using Python frameworks like Flask and
+Fast API. Designed and executed RESTful APIs to ensure smooth frontend-backend
+communication.</li>
+                    <li>Expertly managed MongoDB and PostgreSQL databases. Designed schemas, optimized queries,
+and maintained data integrity for high-traffic applications.</li>
+                    <li>Possess a strong command of version control systems, particularly Git, and proficiently utilize
+Azure DevOps for efficient ticketing and project management. This enables streamlined
+collaboration and organized project tracking.</li>
+                    <li>Engaged directly with clients to comprehend project requirements, ensuring clear
+understanding and alignment. Delivered solutions punctually, maintaining a strong track
+record of meeting client expectations.</li>
+
+                  </ul>
+                    <hr>
+                    <h6 class="title text-danger">2015 - 2016</h6>
+                  <p><b>Software Engineer Intern (Knowledge Lens, A Rockwell Automation Company)</b></p>
+                  <ul>
+                    <li class="subtitle">Consulting project that predicts the scouring viscosity value in the mixing section of a global tyre manufacturer positioning Rockwell Automation as their preferred Data Science solution providers in Japan.</li>
+                    <li>Designed, developed, and maintained RESTful APIs using the Fast API and Flask API
+framework to ensure efficient communication between frontend and backend systems</li>
+                    <li>Leveraged MongoDB and PostgresSQL databases to design data models, implement schemas,
+and optimize queries for seamless data storage and retrieval.</li>
+                    <li>Established authentication and authorization mechanisms within APIs, enhancing data security
+and preventing unauthorized access to sensitive information.</li>
+                    <li>Utilized Git for version control, contributing effectively to collaborative development efforts and
+ensuring codebase integrity on platforms like GitHub.</li>
+
+                  </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
   </section>
 
 
@@ -212,16 +269,10 @@
                     </h5>
                   </div>
                   <div class="more-info">
-                    <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                      expedita aperiam aliquid at.
-                      Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                      mollitia inventore?
-                    </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                      <li><span class="ion-ios-telephone"></span> (617) 557-0089</li>
-                      <li><span class="ion-email"></span> contact@example.com</li>
+                      <li><span class="ion-ios-location"></span> Banglore, Karnataka</li>
+                      <li><span class="ion-ios-telephone"></span> 7012227850</li>
+                      <li><span class="ion-email"></span> sanjujayachandran3458@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
