updated the date of joining as intern

--- a/index.html
+++ b/index.html
@@ -124,8 +124,6 @@
     <li>Excellent client communication and project management skills for smooth delivery.</li>
   </ul>
 </div>
-
-
               </div>
               <div class="col-md-6">
                 <div class="about-me pt-4 pt-md-0">
@@ -188,7 +186,7 @@ record of meeting client expectations.</li>
 
                   </ul>
                     <hr>
-                    <h6 class="title text-danger">2015 - 2016</h6>
+                    <h6 class="title text-danger">01/2022 - 06/2022</h6>
                   <p><b>Software Engineer Intern (Knowledge Lens, A Rockwell Automation Company)</b></p>
                   <ul>
                     <li class="subtitle">Consulting project that predicts the scouring viscosity value in the mixing section of a global tyre manufacturer positioning Rockwell Automation as their preferred Data Science solution providers in Japan.</li>
