Reverted the changes back to SDE

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Sanju Jayachandran</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Jr.DataScientist</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Software Engineer</span></p>
                       <p><span class="title-s">Email: </span> <span>Sanjujayachandran3458@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>+91-7012227850</span></p>
                     </div>
@@ -161,18 +161,22 @@
                     </div>
                 </div>
                 <div class="card-body text-left">
-                    <h6 class="title text-danger">06/2023 - Present</h6>
-                  <p><b>Jr.Data Scientist (Knowledge Lens, A Rockwell Automation Company)</b></p>
-                  <ul>
-                    <li class="subtitle">Consulting project that predicts the scouring viscosity value in the mixing section of a global tyre manufacturer positioning Rockwell Automation as their preferred Data Science solution providers in Japan.</li>
-                    <li>Incorporated machine learning principles into a web application, enabling seamless integration
-and processing of large-scale real-time data.</li>
-                  </ul>
+<!--                    <h6 class="title text-danger">06/2023 - Present</h6>-->
+<!--                  <p><b>Jr.Data Scientist (Knowledge Lens, A Rockwell Automation Company)</b></p>-->
+<!--                  <ul>-->
+<!--                    <li class="subtitle">Consulting project that predicts the scouring viscosity value in the mixing section of a global tyre manufacturer positioning Rockwell Automation as their preferred Data Science solution providers in Japan.</li>-->
+<!--                    <li>Incorporated machine learning principles into a web application, enabling seamless integration-->
+<!--and processing of large-scale real-time data.</li>-->
+<!--                  </ul>-->
                     <hr>
-                    <h6 class="title text-danger">06/2022 - 06/2023</h6>
+                    <h6 class="title text-danger">06/2022 -Present</h6>
                   <p><b>Software Engineer (Knowledge Lens, A Rockwell Automation Company)</b></p>
                   <ul>
-                    <li class="subtitle">Proficiently developed end-to-end web applications using Python frameworks like Flask and
+                                        <li class="subtitle">Consulting project that predicts the scouring viscosity value in the mixing
+                      section of a global tyre manufacturer positioning Rockwell Automation as their preferred Data Science solution providers in Japan.</li>
+                    <li>Incorporated machine learning principles into a web application, enabling seamless integration
+and processing of large-scale real-time data.</li>
+                    <li>Proficiently developed end-to-end web applications using Python frameworks like Flask and
 Fast API. Designed and executed RESTful APIs to ensure smooth frontend-backend
 communication.</li>
                     <li>Expertly managed MongoDB and PostgreSQL databases. Designed schemas, optimized queries,
@@ -189,7 +193,7 @@ record of meeting client expectations.</li>
                     <h6 class="title text-danger">01/2022 - 06/2022</h6>
                   <p><b>Software Engineer Intern (Knowledge Lens, A Rockwell Automation Company)</b></p>
                   <ul>
-                    <li class="subtitle">Consulting project that predicts the scouring viscosity value in the mixing section of a global tyre manufacturer positioning Rockwell Automation as their preferred Data Science solution providers in Japan.</li>
+
                     <li>Designed, developed, and maintained RESTful APIs using the Fast API and Flask API
 framework to ensure efficient communication between frontend and backend systems</li>
                     <li>Leveraged MongoDB and PostgresSQL databases to design data models, implement schemas,
@@ -219,48 +223,6 @@ ensuring codebase integrity on platforms like GitHub.</li>
             <div id="contact" class="box-shadow-full">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
-                      Send Message Us
-                    </h5>
-                  </div>
-                  <div>
-                      <form action="" method="post" role="form" class="contactForm">
-                      <div id="sendmessage">Your message has been sent. Thank you!</div>
-                      <div id="errormessage"></div>
-                      <div class="row">
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                              <div class="validation"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
                       Get in Touch
@@ -268,7 +230,7 @@ ensuring codebase integrity on platforms like GitHub.</li>
                   </div>
                   <div class="more-info">
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> Banglore, Karnataka</li>
+                      <li><span class="ion-ios-location"></span> Bangalore, Karnataka</li>
                       <li><span class="ion-ios-telephone"></span> 7012227850</li>
                       <li><span class="ion-email"></span> sanjujayachandran3458@gmail.com</li>
                     </ul>
