Linkdin and git added

--- a/index.html
+++ b/index.html
@@ -237,10 +237,12 @@ ensuring codebase integrity on platforms like GitHub.</li>
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
+                      <li><a href="https://leetcode.com/sanjujayachandran/"><span class="ico-circle">
+                        <iconify-icon icon="simple-icons:leetcode" style="color: #fa3;"></iconify-icon></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/sanjujayachandran/"><span class="ico-circle"><i class="fa fa-linkedin-square" style="font-size:25px;color: #0077b5"></i>
+</i></span></a></li>
+                      <li><a href="https://github.com/Sanjujc"><span class= "ico-circle"><i class="fa fa-github" style="font-size:24px"></i>
+</span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -257,6 +259,7 @@ ensuring codebase integrity on platforms like GitHub.</li>
   <div id="preloader"></div>
 
   <!-- JavaScript Libraries -->
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/popper/popper.min.js"></script>
